--- a/index.html
+++ b/index.html
@@ -114,54 +114,155 @@
   <script>
     const epiData = {
      capacete: {
-  "Suspensão Carneira com Jugular": {
-    M: "6057580",
-    G: "6014089"
+    "Classe B com Jugular": {
+      "Vermelho (Brigada de Emergência)": "6003936",
+      "Cinza (Operação EAB)": "6036417",
+      "Amarelo (Funcionários recém-contratados)": "6040196",
+      "Branco (Visitantes)": "6003932"
+    },
+    "Suspensão Carneira com Jugular": {
+      "M": "6057580",
+      "G": "6014089"
+    },
+    "Suspensão Capacete com Catraca": {
+      "Único": "6014087"
+    },
+    "Suspensão Capacete Jugular Modelo V-GARD": {
+      "Único": "6039590"
+    },
+    "Capacete para uso no combate a incêndio": {
+      "Amarelo": "6018037",
+      "Amarelo_alt": "6026888",
+      "Vermelho": "6026887"
+    },
+    "Capacete para motosserrista": {
+      "Único": "6057183"
+    },
+    "Boné casquete": {
+      "Azul": "6002682",
+      "Cinza": "6046928",
+      "Vermelho (Brigadista)": "6052621"
+    },
+    "Boné casquete com touca árabe": {
+      "Cinza": "6052113",
+      "Vermelho (Brigadista)": "6052574"
+    },
+    "Boné casquete cinza aba curta": {
+      "Legionário Gold": "6062428",
+      "Classic Gold": "6062429"
+    },
+    "Chapéu de palha": {
+      "55": "6004504",
+      "56": "6004505",
+      "57": "6004506",
+      "58": "6004507"
+    },
+    "Touca árabe de helanca azul": {
+      "Único": "6015094"
+    },
+    "Touca anti chama (soldador)": {
+      "Único": "6057971"
+    },
+    "Balaclava brigadista": {
+      "Meta aramida": "6003955",
+      "Malha algodão (ninja)": "6015091",
+      "Cirúrgica (descartável)": "6015092"
+    }
   },
-  "Classe B com Jugular": {
-    "Vermelho (Brigada de Emergência)": "6003936",
-    "Cinza (Operação EAB)": "6036417",
-    "Amarelo (Funcionários recém-contratados)": "6040196",
-    "Branco (Visitantes)": "6003932"
+
+  oculos: {
+    "Óculos Incolor": { "Único": "6016960" },
+    "Óculos Incolor_alt": { "Único": "6008510" },
+    "Óculos Cinza": { "Único": "6016961" },
+    "Óculos Ampla Visão (Sobrepor)": { "Único": "6008482" },
+    "Óculos Ampla Visão (anti-embaçante)": { "Único": "6060719" },
+    "Óculos Ampla Visão com Clip (anti-embaçante)": { "Único": "6052118" },
+    "Óculos Aruba (ampla visão)": { "Único": "6060719" },
+    "Óculos anti-embaçante e anti-riscos (alta resistência)": { "Único": "6054348" },
+    "Óculos para oxi-corte": { "Tonalidade 3": "6008508", "Tonalidade 5": "6008526" },
+    "Óculos de segurança graduado": { "Monofocal": "6042260", "Multifocal": "6042262", "Haste policarbonato": "6017435" },
+    "Protetor facial lente incolor (variações mm)": { "125mm": "6008176", "190mm": "6007178", "195mm": "6044607", "230mm": "6046755", "250mm": "6011923" },
+    "Protetor facial tonalidade 5": { "Único": "6038194" },
+    "Visor para protetor facial (vários tamanhos)": { "155mm": "6056930", "190mm": "6041346", "230mm": "6046819" },
+    "Protetor facial com viseira de tela": { "Único": "6060162" },
+    "Protetor facial termoplast lente incolor": { "Único": "6050971" },
+    "Máscara / placa de solda automática (variações)": { "6008180": "6008180", "6049452": "6049452", "6051722": "6051722", "6056962": "6056962", "6059155": "6059155", "6059175": "6059175" },
+    "Máscara solda suspensão ajustada": { "Com catraca": "6008181", "Com carneira": "6008182" },
+    "Lentes para máscara de solda (diversas)": { "Incolor": "6006371", "Incolor_80x182": "6045240", "Verde_108x51x3": "6007370", "Verde_150x85": "6007371", "Tonalidade 10": "6006369", "Tonalidade 12": "6006370" }
   },
-  "Suspensão Capacete com Catraca": {
-    "Único": "6014087"
+
+  botina: {
+    "Bota SEG PVC preta cano longo sem bico de aço": {
+      "35": "6002760", "36": "6002732", "37": "6002733", "38": "6002734", "39": "6002735", "40": "6002736",
+      "41": "6002737", "42": "6002738", "43": "6002739", "44": "6002740", "45": "6018105"
+    },
+    "Bota SEG PVC preta cano longo com bico de aço": {
+      "36":"6051427","37":"6049357","38":"6018088 / 6060965","39":"6018089 / 6060928","40":"6018090 / 6060914",
+      "41":"6018091","42":"6018092 / 6060927","43":"6018093 / 6060944","44":"6018094","45":"6053673 / 6060943"
+    },
+    "Bota SEG PVC branca cano longo sem bico de aço": {
+      "34":"6026855","35":"6002742","36":"6002721","37":"6002722","38":"6002723","39":"6002724","40":"6002725",
+      "41":"6002726","42":"6002727","43":"6002728","44":"6002729","45":"6002730"
+    },
+    "Bota vaqueta com composite": {
+      "36":"6050775","37":"6050761","38":"6050760","39":"6050734","40":"6050768","41":"6050744","42":"6050759","43":"6050733","44":"6050743","45":"6050732","46":"6050767","47":"6049174"
+    },
+    "Botina de amarrar antitorção": {
+      "34":"6054631","35":"6054630","36":"6054664","37":"6054622","38":"6054663","39":"6054672","40":"6054621","41":"6054683","42":"6054682","43":"6054681","44":"6054662","45":"6054661","46":"6054680","47":"6054671"
+    },
+    "Botina canavieira com proteção metatarso e biqueira de aço": {
+      "34":"6054640","35":"6054639","36":"6054638","37":"6054637","38":"6054687","39":"6054624","40":"6054698","41":"6054642","42":"6054623","43":"6054673","44":"6054686","45":"6054697","46":"6054641","47":"6054685"
+    },
+    "Botina de amarrar resistência altas temperaturas (15 cm) Brigada": {
+      "36":"6059453","37":"6059441","38":"6059442","39":"6059452","40":"6059423","41":"6059451","42":"6059440","43":"6059422","44":"6059421","45":"6059450","46":"6059420","47":"6059419"
+    },
+    "Botina de amarrar resistência altas temperaturas (19 cm) Brigada": {
+      "36":"6059512","37":"6059493","38":"6059492","39":"6059515","40":"6059494","41":"6059528","42":"6059527","43":"6059518","44":"6059526","45":"6059517","46":"6059525","47":"6059535"
+    },
+    "Botina de amarrar antitorção composite 15 cm": {
+      "36":"6050775","37":"6050761","38":"6050760","39":"6050734","40":"6050768","41":"6050744","42":"6050759","43":"6050733","44":"6050743","45":"6050732","46":"6050767","47":"6049174"
+    },
+    "Palmilha antibacteriana (pares por numeração)": {
+      "36":"6054626","37":"6054603","38":"6054602","39":"6054612","40":"6054601","41":"6054611","42":"6054600","43":"6054599","44":"6054588","45":"6054598","46":"6054625","47":"6054610"
+    }
+  },
+
+  colete: {
+    "Colete Verde Limão (blusão)": { "M":"6027671","G":"6027672","GG":"6039623","XGG":"6057591" },
+    "Colete Refletivo Jaléco Verde Limão": { "M":"6039986","G":"6039988","XG":"6039987","XXG":"6056900" },
+    "Colete Refletivo Blusão Verde Limão": { "P":"6043579","M":"6043674","G":"6056980","GG":"6043676","XG":"6056971","XXG":"6040088","XXXG":"6041560" },
+    "Colete Refletivo Laranja": { "P":"6050658","M":"6039990","G":"6039991","XG":"6039992","XXG":"6039993" },
+    "Colete Refletivo Operações de Suprimentos": { "P":"6059856","M":"6059818","G":"6059819","GG":"6060038","XG":"6060037","XXG":"6060078" }
+  },
+
+  protetorAuricular: {
+    "Concha acoplado ao capacete": { "20dB":"6057009","22dB":"6057986" },
+    "Concha haste na nuca": { "Único":"6045795" },
+    "Concha haste fixa": { "Único":"6057987" },
+    "Plug silicone 3 tamanhos": { "P":"6016022","M":"6044293","G":"6057569" },
+    "Plug moldável (espuma)": { "Único":"6011910" }
+  },
+
+  luvas: {
+    "Luva Resistência Mecânica": { "8":"6043567","9":"6043568","10":"6047676","11":"6052203" },
+    "Luva Elastano Maxi Dry": { "P":"6050998","M":"6042869","G":"6042868" },
+    "Luva de Procedimento": { "PP":["6007583","6051588"], "P":"6052939", "M":["6042450","6052947"], "G":["6042451","6052934"] }
+  },
+
+  uniforme: {
+    "Camisa Manga Curta": { "PP":"6040852","P":"6040886","M":"6040925","G":"6040926","GG":"6040927","XG":"6040928" },
+    "Camisa Manga Longa": { "PP":"6038450","P":"6040931","M":"6040932","G":"6040933","GG":"6040866" },
+    "Calça Cinza": { "PP":"6040870","P":"6040872","M":"6040873","G":"6040895","GG":"6040897" }
+  },
+
+  outros: {
+    "Protetor facial termoplast": { "Único":"6050971" },
+    "Visor para protetor facial (vários tamanhos)": { "155mm":"6056930","190mm":"6041346","230mm":"6046819" },
+    "Capuz antiácido com visor": { "Único":"6003959 / 6056925" },
+    "Capuz térmico para câmara fria": { "Único":"6060847" },
+    "Touca cirúrgica descartável": { "Único":"6015092","alt":"6039073" }
   }
-},
-      oculos: { "Óculos Incolor": { Único: "6016960" }, "Óculos Cinza": { Único: "6016961" }, "Óculos Ampla Visão": { Único: "6008482" } },
-      botina: { 
-        "Bota SEG PVC preta cano longo com bico de aço": { 36:"6051427",37:"6049357",38:"6018088 / 6060965",39:"6018089 / 6060928",40:"6018090 / 6060914",41:"6018091",42:"6018092 / 6060927",43:"6018093 / 6060944",44:"6018094",45:"6053673 / 6060943"},
-        "Bota PVC sem Bico de Aço": { 35:"6002760",36:"6002732",37:"6002733",38:"6002734",39:"6002735",40:"6002736",41:"6002737",42:"6002738",43:"6002739",44:"6002740",45:"6018105"},
-        "Bota Vaqueta com Composite": {36:"6050775",37:"6050761",38:"6050760",39:"6050734",40:"6050768",41:"6050744",42:"6050759",43:"6050733",44:"6050743",45:"6050732",46:"6050767",47:"6049174"},
-        "Botina de Amarrar Antitorção": {34:"6054631",35:"6054630",36:"6054664",37:"6054622",38:"6054663",39:"6054672",40:"6054621",41:"6054683",42:"6054682",43:"6054681",44:"6054662",45:"6054661",46:"6054680",47:"6054671"}
-      },
-      colete: { "Colete Verde Limão": { M:"6027671",G:"6027672",GG:"6039623",XGG:"6057591"} },
-      protetorAuricular: { "Plug Silicone 3 Tamanhos": { P:"6016022",M:"6044293",G:"6057569"} },
-      luvas: {
-  "Luva Resistência Mecânica": {
-    "8": "6043567",
-    "9": "6043568",
-    "10": "6047676",
-    "11": "6052203"
-  },
-  "Luva Elastano Maxi Dry": {
-    "P": "6050998",
-    "M": "6042869",
-    "G": "6042868"
-  },
-  "Luva de Procedimento": {
-    "PP": ["6007583", "6051588"],
-    "P": "6052939",
-    "M": ["6042450", "6052947"],
-    "G": ["6042451", "6052934"]
-  }
-},
-      uniforme: {
-        "Camisa Manga Curta": { PP:"6040852",P:"6040886",M:"6040925",G:"6040926",GG:"6040927",XG:"6040928" },
-        "Camisa Manga Longa": { PP:"6038450",P:"6040931",M:"6040932",G:"6040933",GG:"6040866" },
-        "Calça Cinza": { PP:"6040870",P:"6040872",M:"6040873",G:"6040895",GG:"6040897" }
-      }
-    };
+  };
 
     // ------------------------------
     // dicionário global de colaboradores (nome + cargo)
@@ -425,14 +526,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
