--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
     th,td{border:1px solid #ddd;padding:12px;text-align:center;}
     th{background:#2e7d32;color:white;}
     tr:nth-child(even){background:#f9f9f9;}
+    select,
+input[type="text"],
+input[type="number"] {
+  width:100%;
+  padding:12px;
+  margin-top:5px;
+  border:1px solid #ccc;
+  border-radius:8px;
+  transition:all 0.3s;
+}
+
     @media(max-width:650px){.registros{grid-template-columns:1fr;}form,#searchCS,table{width:95%;}}
   </style>
 </head>
@@ -61,6 +72,10 @@
 
     <label for="motivo">Motivo:</label>
     <input type="text" id="motivo" placeholder="Digite o motivo do uso" required />
+
+    <label for="quantidade">Quantidade:</label>
+    <input type="number" id="quantidade" min="1" value="1" required />
+
 
     <button type="submit">Registrar</button>
   </form>
@@ -357,9 +372,9 @@
       } else {codigoSelecionadoDiv.textContent="";}
     });
 
-    async function salvarRegistro(cs,tipoEpi,modelo,tamanho,codigo,motivo){
-      const registros=JSON.parse(localStorage.getItem("registrosEPI"))||[];
-      const novo={ id: String(Date.now()), cs, tipoEpi, modelo, tamanho, codigo, motivo, data:new Date().toISOString() };
+    async function salvarRegistro(cs,tipoEpi,modelo,tamanho,codigo,motivo,quantidade){
+    const registros=JSON.parse(localStorage.getItem("registrosEPI"))||[];
+    const novo={ id: String(Date.now()), cs, tipoEpi, modelo, tamanho, codigo, motivo, quantidade, data:new Date().toISOString() };
       registros.push(novo);
       localStorage.setItem("registrosEPI",JSON.stringify(registros));
       atualizarListaRegistros();
@@ -526,3 +541,11 @@
   </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
