--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@ input[type="number"] {
       "126193": { nome: "Wagner Luiz Beneis", cargo: "Operador Produção Etanol II" },
       "332008": { nome: "Onivaldo Sotana", cargo: "Operador Produção Etanol III" },
       "430119": { nome: "Daniel Raimundo Ferro", cargo: "Estagiário" },
+      "446509": { nome: "Joao Victor Tapia", cargo: "Operador Limpeza Operativa" },
       "37995": { nome: "Almir Ferreira de Ataíde", cargo: "Gestor Produção Ind" }
     };
 
@@ -541,7 +542,6 @@ input[type="number"] {
   </script>
 </body>
 </html>
-
 
 
 
