--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ input[type="number"] {
       <option value="protetorAuricular">Protetor Auricular</option>
       <option value="luvas">Luvas</option>
       <option value="uniforme">Uniforme</option>
+      <option value="altura">Trabalho em altura</option>
     </select>
 
     <label for="codigoEpi">Tamanho:</label>
@@ -202,6 +203,27 @@ input[type="number"] {
     "Máscara solda suspensão ajustada": { "Com catraca": "6008181", "Com carneira": "6008182" },
     "Lentes para máscara de solda (diversas)": { "Incolor": "6006371", "Incolor_80x182": "6045240", "Verde_108x51x3": "6007370", "Verde_150x85": "6007371", "Tonalidade 10": "6006369", "Tonalidade 12": "6006370" }
   },
+
+altura: {
+  "Cinto paraquedista": {
+    "Hl01203st (Hércules)": "6026454",
+    "Hl40001prvrsl paramida – atividades a quente (Hércules)": "6043311"
+  },
+  "Talabarte duplo": {
+    "Hl032ykvepr (Hércules) 30mm": "6026505",
+    "Hl032ykvepr (Hércules) 40mm": "6043305",
+    "Hl032yeact (Hércules) 50mm": "6043304",
+    "Hl032y53arg (Hércules) 45mm": "6061289"
+  },
+  "Cinto paraquedista e talabarte duplo delta resist": {
+    "Cinto de segurança": "6052767",
+    "Talabarte": "6052716"
+  },
+  "Trava quedas baixas alturas nano-lok": {
+    "Cinto de segurança": "6050806",
+    "Trava quedas baixas alturas nano-lok": "6050783"
+  }
+},
 
   botina: {
     "Bota SEG PVC preta cano longo sem bico de aço": {
