--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ input[type="number"] {
 
   <!-- 🔥 Firebase -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-    import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, query, where, orderBy, limit } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCA2BCko4ya3Hdb36r6c0JU5kHega-6wok",
@@ -564,6 +564,7 @@ altura: {
   </script>
 </body>
 </html>
+
 
 
 
